# actix-auth-service

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
src/config/: mod.rs
