[package]
name = "auth-service"
version = "0.1.0"
authors = ["Nikita Kuprin <nikon5070@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
dotenv = "0.15.0"

serde = { version = "1.0.125", features = ['derive']}

actix-web = "3.3.2"
actix-rt = "2.2.0"

eyre = "0.6.5"
color-eyre = "0.5.10"

tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.2", features = ['env_logger']}
tracing-subscriber = "0.2.17"